--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lamg="en">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
     <header>
         <nav>
@@ -115,5 +113,4 @@
         </section>
     </footer>
 </body>
-
 </html>
