--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <address>
                 <ul>
                     <li>
-                        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+                        <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
                     </li>
                     <li>
                         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -74,28 +74,28 @@
             </h2>
             <ul>
                 <li>
-                   <img src="./images/img1.jpg" alt="Product Designer" widt="264" height="260"/>
+                   <img src="./images/img1.jpg" alt="Product Designer" width="264" height="260"/>
                    <h3>Mark Guerrero</h3>
                    <p>
                     Product Designer
                    </p> 
                 </li>
                 <li>
-                    <img src="./images/img2.jpg" alt="Frontend Dveloper" widt="264" height="260"/>
+                    <img src="./images/img2.jpg" alt="Frontend Dveloper" width="264" height="260"/>
                     <h3>Tom Ford</h3>
                     <p>
                      Frontend Developer
                     </p> 
                 </li>
                 <li>
-                    <img src="./images/img3.jpg" alt="Marketing" widt="264" height="260"/>
+                    <img src="./images/img3.jpg" alt="Marketing" width="264" height="260"/>
                     <h3>Camila Garcia</h3>
                     <p>
                      Marketing
                     </p> 
                 </li>
                 <li>
-                    <img src="./images/img4.jpg" alt="UI Designer" widt="264" height="260"/>
+                    <img src="./images/img4.jpg" alt="UI Designer" width="264" height="260"/>
                     <h3>Daniel Wilson</h3>
                     <p>
                      UI Designer
