--- a/index.html
+++ b/index.html
@@ -8,18 +8,10 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WEBSTUDIO</a>
-            <ul>
-              <li>
+            <a href="./index.html">WEBSTUDIO</a>      
                 <a href="#studio">Studio</a>
-              </li>
-              <li>
                 <a href="#portfolio">Portfolio</a>
-              </li>
-              <li>
                 <a href="#contacts">Contacts</a>
-              </li>
-            </ul>
             <address>
                 <ul>
                     <li>
@@ -105,12 +97,10 @@
         </section>
     </main>
     <footer>
-        <section>
             <a href="./index.html">WEBSTUDIO</a>
-            <p>
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.  
+            <br>
+                Increase the flow of customers and</br> sales for your business with digital</br> marketing & growth solutions.  
             </p>  
-        </section>
     </footer>
 </body>
 </html>
