--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     </head>
     <body>
         <header>
             <nav>
                 <a href="./index.html">WEBSTUDIO</a>      
-                    <a href="#studio">Studio</a>
-                    <a href="#portfolio">Portfolio</a>
-                    <a href="#contacts">Contacts</a>
-                <address>
-                    <ul>
-                        <li>
-                            <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
-                        </li>
-                        <li>
-                            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        </li>
-                    </ul>
-                </address>
+                <ul>
+                    <li>
+                        <a href="#studio">Studio</a>
+                    </li>
+                    <li>
+                        <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#contacts">Contacts</a>
+                    </li>
+                </ul>
             </nav>
-        </header>
+            <address>
+                <ul>
+                    <li>
+                        <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+                    </li>
+                    <li>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+            </address>
+    </header>
         <main>
             <section>
-                <h1>Effective Solutions
-                    for Your Business</h1>
+                <h2>Effective Solutions for Your Business</h2>
                 <button type="button">Order Service</button>
             </section>
             <section>
@@ -59,11 +66,8 @@
                     </li>
                 </ul>
             </section>
-
             <section>
-                <h2>
-                    Our Team
-                </h2>
+                <h2>Our Team</h2>
                 <ul>
                     <li>
                     <img src="./images/img1.jpg" alt="Product Designer" width="264" height="260"/>
@@ -97,10 +101,10 @@
             </section>
         </main>
         <footer>
-                <a href="./index.html">WEBSTUDIO</a>
-                <p>
-                    Increase the flow of customers and<br /> sales for your business with digital<br /> marketing & growth solutions.<br />  
-                </p>  
+            <a href="./index.html">WEBSTUDIO</a>
+            <p>
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.  
+            </p>  
         </footer>
     </body>
 </html>
