--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <nav>
-                <a href="./index.html">WEBSTUDIO</a>      
+                <a href="./index.html">WebStudio</a>      
                 <ul>
                     <li>
                         <a href="#studio">Studio</a>
@@ -34,10 +34,11 @@
     </header>
         <main>
             <section>
-                <h2>Effective Solutions for Your Business</h2>
+                <h1>Effective Solutions for Your Business</h1>
                 <button type="button">Order Service</button>
             </section>
             <section>
+                <h2>Our Team</h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
@@ -101,7 +102,7 @@
             </section>
         </main>
         <footer>
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <p>
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.  
             </p>  
